# simta-admin

./: .gitignore  40simta.cron  Makefile.am  check-simta-expansion  check-simta-queue  check-simta-queue-age  check-simta-queue-jailed  check-simta-queue-ownership  configure.ac  metrics-simta  simqc  simqclean  simqgrep  simtamaint  simtrans  slow_queue_ips
packaging/rpm/: simta-admin.spec  simta-admin.spec.in
